--- a/style.css
+++ b/style.css
@@ -33,3 +33,35 @@
     background-color: brown;
     transform: rotate(90deg);
 }
+
+.animationSection .box {
+    width: 200px;
+    height: 300px;
+    background-color: black;
+    /* animation-name: changeColor; */
+    /* animation-duration: 4s;
+    animation-iteration-count: 1;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards; */
+    animation: changeColor 4s linear 0s infinite alternate forwards;
+}
+
+@keyframes changeColor {
+    0% {
+        background-color: black;
+        width: 200px;
+    }
+    20% {
+        background-color: yellow;
+        width: 150px;
+    }
+    50% {
+        background-color:crimson;
+        width: 150px;
+    }
+    100% {
+        background-color: red;
+        width: 100px;
+    }
+}
